--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h3.section-heading {height: 112px; background: url('img/bg-header.png') no-repea
 .signup p {padding: 76px 0 8px 0;}
 .signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
 .signup button {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
+.signup input[type="submit"] {opacity: 0;}
 
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
