--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ h1 {}
 h2, h3, h4, h5, h6, .btn {}
 a:link {text-decoration: none;}
 
+.row {margin: 0;}
+.col-xs-12 {padding: 0;}
+
 .clearfix {*zoom: 1;}
 .clearfix:before,
 .clearfix:after {display: table; content: ""; line-height: 0;}
@@ -18,12 +21,15 @@ a:link {text-decoration: none;}
 .navbar-header img.logo {width: 110px;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
 
-h3.section-heading {height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; font-weight: 100; letter-spacing: 3px; margin: 0;}
+
+h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
+h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
+
 	
 .signup {color: white; text-align: center; font-size: 18px; padding-bottom: 40px;}
 .signup p {padding: 76px 0 8px 0;}
 .signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
-.signup button {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
+.signup button, .all-events a {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
 
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
@@ -55,24 +61,24 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .filtering button {color: #000; letter-spacing: 1px; border: none; padding: 15px 20px 12px 20px;}
 .filtering button.active {-moz-box-shadow: inset 0 0 11px #666; -webkit-box-shadow: inset 0 0 11px #666; box-shadow: inset 0 0 11px #666;}
 
-.events {height: 725px;}
-.editorial {height: 625px; padding-bottom: 150px;}
+.events {min-height: 725px;}
+.all-events {text-align: center; margin-top: 40px;}
+.all-events a {color: #fff; float: none; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
+
+.editorial {padding-bottom: 40px;}
 .editorial .entry-desc, .editorial h3.entry-title, .editorial .thumb .meta, .entry-details {border: none;}
 .editorial .entry-info-wrap {width: auto;}
 .editorial h3 {margin-bottom: 0;}
 .editorial h3.entry-title a {text-transform: none;}
 .editorial h5 {margin-top: 0;}
 .editorial article {height: auto;}
+.editorial .image {max-height: 300px; overflow: hidden;}
 
-.section-heading {text-align: center; color: white;}
-.section-heading-left {color: white;}
-
-footer {height: 150px;}
+footer {padding: 4px 10px 70px 0; text-align: right;}
 
 /* END CSS BY DAVE */
 
 .container {}
-.row {margin: 0;}
 
 /* #content {background: fuchsia;} */
 #sidebar {float:right; width: 24%; background: yellow;}
@@ -100,7 +106,7 @@ footer {height: 150px;}
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
 @media screen and (min-width: 768px){
 	.nav {
-		width: 456px;
+		/* width: 456px; */
 		position: absolute;
 		margin-left: -228px;
   		left: 50%;
