--- a/style.css
+++ b/style.css
@@ -25,11 +25,13 @@ a:link {text-decoration: none;}
 h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
 h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
 
-	
+
 .signup {color: white; text-align: center; font-size: 18px; padding-bottom: 40px;}
 .signup p {padding: 76px 0 8px 0;}
 .signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
 .signup button, .all-events a {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
+.signup input[type="submit"] {opacity: 0;}
+
 
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
@@ -106,7 +108,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
 @media screen and (min-width: 768px){
 	.nav {
-		/* width: 456px; */
+		/* width: 456px; This breaks some things so Brian is hiding it now */
 		position: absolute;
 		margin-left: -228px;
   		left: 50%;
