--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .all-events {text-align: center; margin-top: 40px;}
 .all-events a {color: #fff; float: none; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
 
-.editorial {padding-bottom: 40px;}
+.editorial {padding-bottom: 40px; margin-top: 50px;}
 .editorial .entry-desc, .editorial h3.entry-title, .editorial .thumb .meta, .entry-details {border: none;}
 .editorial .entry-info-wrap {width: auto;}
 .editorial h3 {margin-bottom: 0;}
