--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ a:link {text-decoration: none;}
 .navbar-header img.logo {width: 110px;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
 
+/* CSS for the modal button:      */
+.close {color: white; opacity: 1;}
 
 h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
 h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
