removed black background from Articles text on homepage

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .editorial article {height: auto;}
 .editorial .image {max-height: 300px; overflow: hidden;}
 .meta .tags a {background: orange;}
-
+.thumb .article-info {color: #fff; padding: 15px;}
 footer {padding: 4px 10px 70px 0; text-align: right;}
 
 /* END CSS BY DAVE */
