--- a/style.css
+++ b/style.css
@@ -92,22 +92,21 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .btn-lg {border-radius: 10px;}
 	
 /* Events */
-.meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left;}
+.day-date a, .meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}
 .meta .venue a {background: #2a25ed; color: #ddd;}
 .meta .neighborhood a {background: #db009d;}
 .meta .genre a {background: #8b00f8;}
 .meta .price a {background: #b973f0;}
 .meta .djs a {background: aqua;}
 .meta .promoters a {background: #4cadff;}
-.days-of-the-week a {background: #ff2527;}
+.day-date a {background: #ff2527; margin-bottom: 12px;}
 
 /* Listings Pages */
 .listing {margin-top: 50px;}
 .listing .front-content, .listing .col-xs-10 {padding: 0;}
 .listing article {color: #fff;}
 .listing .main {padding-left: 8px;}
-.listing .entry-details a {color: #428bca;}
-.listing h5 a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left;}
+/*.listing h5 a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}*/
 .listing .flyer {overflow: hidden; padding: 0; min-height: 375px;}
 .next-prev {text-align: center; color: #fff; font-size: 18px; padding: 8px;}
 .next-prev a {color: #fff; padding: 5px;}
