--- a/style.css
+++ b/style.css
@@ -17,14 +17,12 @@ a:link {text-decoration: none;}
 /* CSS BY DAVE IS BELOW */
 
 .navbar {background: black; border: none; height: 100px;}
-.collapsed {background: black; border: none; height: 63px;}
 .navbar h6 {margin: 4px 0 0 0;}
 .navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;}
 .navbar-header img.logo {width: 220px;}
-.navbar-header img.logoCollapsed {width: 110px;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
 .logoText {color: white;}
-.logoTextCollapsed {font-size: 14px;}
+.not-found {padding-top: 20px;}
 
 /* removes placeholder text in input field on focus */
 input:focus::-webkit-input-placeholder { color:transparent; }
@@ -77,7 +75,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 
 .events {min-height: 725px;}
 .all-events {text-align: center; margin-top: 40px;}
-.all-events a {color: #fff; float: none; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
+.all-events a {color: #fff; float: left; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
 
 .editorial {padding-bottom: 40px; margin-top: 50px;}
 .editorial .entry-desc, .editorial h3.entry-title, .editorial .thumb .meta, .entry-details {border: none;}
@@ -90,6 +88,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .meta .tags a {background: orange;}
 .thumb .article-info {color: #fff; padding: 15px;}
 footer {padding: 4px 10px 70px 0; text-align: right;}
+#article-sidebar {padding-left: 20px;}
 
 /* END CSS BY DAVE */
 
@@ -127,6 +126,8 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .single header h4 {color: #fff; text-shadow: 2px 2px #000;}
 .single .entry-summary {padding: 15px; color: #fff;}
 .single .front-content {padding: 0;}
++.category-name {float: left;}
++.category-term {float: left; margin: 8px;}
 
 /* this media query is by Dave- centers the nav when not in hamburger mode */
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
