--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a:link {text-decoration: none;}
 .navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;}
 .navbar-header img.logo {width: 220px;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
+.navbar-collapse {background: black;}
 .logoText {color: white;}
 .not-found {padding-top: 20px;}
 
@@ -38,10 +39,9 @@ h3.event-heading {text-align: center; height: 112px; background: url('img/bg-hea
 
 .signup {color: white; text-align: center; font-size: 18px; padding: 50px 0 40px 0;}
 .signup p {padding: 0 0 8px 0;}
-.signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
+.signup input {height: 40px; min-width: 200px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
 .signup button, .all-events a {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
 .signup input[type="submit"] {opacity: 0;}
-
 
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
@@ -78,6 +78,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .all-events a {color: #fff; float: left; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
 
 .editorial {padding-bottom: 40px; margin-top: 50px;}
+.article {margin-top: 50px;}
 .editorial .entry-desc, .editorial h3.entry-title, .editorial .thumb .meta, .entry-details {border: none;}
 .editorial .entry-info-wrap {width: auto;}
 .editorial h3 {margin-bottom: 0;}
@@ -162,7 +163,7 @@ and (orientation : portrait) {
 
 /* iPhone */
 @media only screen and (min-width:320px) and (max-width:767px) {
-	
+
 }
 
 /* iPhone 5/5S */
@@ -178,4 +179,9 @@ and (orientation : portrait) {
 and (min-device-width : 320px) 
 and (max-device-width : 767px) 
 and (orientation : portrait) {
+}
+
+/* centers signup button when it collapses under the signup field */
+@media screen and (max-width: 516px){
+	.signup button {float: none;}
 }
