--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a:link {text-decoration: none;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
 .logoText {color: white;}
 .not-found {padding-top: 20px;}
+.navbar-collapse {background: black;}
 
 /* removes placeholder text in input field on focus */
 input:focus::-webkit-input-placeholder { color:transparent; }
@@ -134,6 +135,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 @media screen and (min-width: 768px){
 	.nav {
 		/* width: 456px; This breaks some things so Brian is hiding it now */
+		padding-top: 20px;
 		position: absolute;
 		margin-left: -228px;
   		left: 50%;
