--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .day-date a {background: #ff2527; margin-bottom: 12px;}
 
 /* Listings Pages */
+.page-header h1 {color: #161616;}
 .listing {margin-top: 50px;}
 .listing .front-content, .listing .col-xs-10 {padding: 0;}
 .listing article {color: #fff;}
