Fix for the flyer image in FF problem

--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@ h2, h3, h4, h5, h6, .btn {}
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, 
 .col-xs-12 {padding: 0;}
 a:link {text-decoration: none;}
-
-/*this removes a blue outline that appeared around the hamburger after it was clicked in Chrome*/
-button:focus {outline:0px !important; -webkit-appearance:none;}
-
 .row {margin: 0;}
 
 .clearfix {*zoom: 1;}
@@ -19,23 +15,14 @@ button:focus {outline:0px !important; -webkit-appearance:none;}
 
 /* CSS BY DAVE IS BELOW */
 
-.navbar {background: black; border: none; height: 117px;}
+.navbar {background: black; border: none; height: 100px;}
 .navbar h6 {margin: 4px 0 0 0;}
-/* .navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;} not needed anymore */
+.navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;}
 .navbar-header img.logo {width: 220px;}
 .navbar-default .nav li a {color: white; padding: 23px 15px 0 15px;}
 .logoText {color: white;}
-.navbar-left {margin-left: 100px; padding-top: 10px;}
 .not-found {padding-top: 20px;}
 .navbar-collapse {background: black;}
-.navbar-collapse.in, .navbar-collapse.collapsing {margin-top: -21px;}
-
-/*Firefox was rendering the top margin of the dropdown menu differently, but this took care of it: */
-@-moz-document url-prefix() {.navbar-collapse.in, .navbar-collapse.collapsing {margin-top: -2px;}}
-
-.navbar-collapse.in .nav, .navbar-collapse.collapsing .nav{margin-top: -15px;}
-.navbar-collapse.in .share-buttons, .navbar-collapse.collapsing .share-buttons{padding: 20px 0 10px 10px;}
-.navbar-right {padding: 10px 10px 0 0;}
 
 /* removes placeholder text in input field on focus */
 input:focus::-webkit-input-placeholder { color:transparent; }
@@ -44,7 +31,6 @@ input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 
 /* CSS for the modal button:      */
 .close {color: white; opacity: 1;}
-.modal-body {padding-left: 0;}
 
 h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
 h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
@@ -60,13 +46,11 @@ h3.event-heading {text-align: center; height: 112px; background: url('img/bg-hea
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
 /* Event Thumbs from Homepage */
-article.thumb {height: 480px; float: left; position: relative;}
+article.thumb {height: 480px; float: left; position: relative; overflow: hidden; display: block;}
 .posts {padding: 0;}
-.posts .col-xs-4 {padding: 0; overflow: hidden;}
-.thumb {display: table; vertical-align: middle; overflow: hidden;}
+.posts .col-xs-4 {padding: 0;}
 .flyer img {position: absolute; z-index: 1;}
-.thumb .entry-info-wrap {z-index: 2; position: relative; vertical-align: bottom; display: table-cell; width: 100%;}
-.thumb .entry-info {background: rgba(0,0,0,0.8); color: #fff; padding: 15px;}
+.thumb .entry-info {background: rgba(0,0,0,0.8); color: #fff; padding: 15px; z-index: 2; position: absolute; bottom: 0; width: 100%;}
 .entry-desc, h3.entry-title, .thumb .meta, .entry-details {border-bottom: 4px solid #fff; padding-bottom: 6px;}
 h3.entry-title {margin: 0 0 6px 0;}
 h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
@@ -146,8 +130,8 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 
 /* this media query is by Dave- centers the nav when not in hamburger mode */
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
-@media screen and (min-width: 1151px){
-	.nav{
+@media screen and (min-width: 768px){
+	.nav {
 		/* width: 456px; This breaks some things so Brian is hiding it now */
 		padding-top: 20px;
 		position: absolute;
@@ -155,7 +139,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
   		left: 50%;
   	}
 }
-
+	
 /* 1024px */
 
 @media all and (max-width: 1024px) {
@@ -199,52 +183,4 @@ and (min-device-width : 320px)
 and (max-device-width : 767px) 
 and (orientation : portrait) {
 	.filtering .btn-group {margin-bottom: 5px;}
-}
-
-/* collapse the Bootstrap navbar at a custom width */
-/* see http://stackoverflow.com/questions/22329606/bootstrap-navbar-collapse-media-query-on-custom-width */
-@media (max-width: 1150px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-left, .logoText {
-    	margin-left: 10px;
-    }
-    .logo {
-    	padding-top: 10px;
-    }
-    .logoText {
-    	padding-bottom: 1px;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-    }
 }
