--- a/style.css
+++ b/style.css
@@ -43,20 +43,18 @@ input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
 input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 
-/* CSS for the modal button:      */
+/* CSS for the modal button: */
 .close {color: white; opacity: 1;}
 .modal-body {padding-left: 0;}
 
 h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
 h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
 
-
 .signup {color: white; text-align: center; font-size: 18px; padding: 10px 0 40px 0;}
 .signup p {padding: 0 0 8px 0;}
 .signup input {height: 40px; border: 1px solid #424242; border-radius: 5px; -moz-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); -webkit-box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5); box-shadow: inset 1px 1px 5px rgba(0,0,0,0.5);}
 .signup button, .all-events a {width: 134px; height: 39px; background: url('img/btn-signup.png') no-repeat; color: #fff; padding-top: 1px; border: none; float: left; margin-left: 20px;}
 .signup input[type="submit"] {opacity: 0;}
-
 
 .front-content {border-top: 1px solid #ccc; background: #161616; padding: 0 40px 0 40px;}
 
@@ -101,11 +99,19 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .meta .tags a {background: orange;}
 .thumb .article-info {color: #fff; padding: 15px;}
 footer {padding: 4px 10px 70px 0; text-align: right;}
-#article-sidebar {padding-left: 20px;}
+#article-sidebar {padding: 0 10px 0 20px;}
+.article-sidebar h3 {margin-bottom: 10px;}
+.article-sidebar li {margin-bottom: 7px; line-height: 1.3em;}
 
 /* END CSS BY DAVE */
 
 .btn-lg {border-radius: 10px;}
+
+/* Sidebars */
+#sidebar, .widget-title, aside h3 {color: #fff;}
+#sidebar h3 {text-transform: uppercase; margin: 15px 0 10px 0; font-size: 20px;}
+#main-sidebars {padding: 0 10px 0 0;}
+.single #main-sidebars {padding-left: 10px;}
 	
 /* Events */
 .day-date a, .meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}
@@ -118,11 +124,12 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .day-date a {background: #ff2527; margin-bottom: 12px;}
 
 /* Listings Pages */
-.page-header h1 {color: #161616;}
-/*.listing {margin-top: 50px;}*/
+.page-header h1, h1.page-title, h1.entry-title {color: #161616;}
 .listing .front-content, .listing .col-xs-10 {padding: 0;}
 .listing article {color: #fff;}
 .listing .main {padding-left: 8px;}
+/* No longer needed?
+.listing {margin-top: 50px;}*/
 /*.listing h5 a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}*/
 .listing .flyer {overflow: hidden; padding: 0; min-height: 375px;}
 .next-prev {text-align: center; color: #fff; font-size: 18px; padding: 8px;}
@@ -133,7 +140,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .single header {padding: 0; overflow: hidden;} 
 .single .header-info {background: rgba(0,0,0,0.5); z-index: 2; position: relative; padding: 50px 0 25px 30px;}
 .single .front-content {padding-left: 0; min-height: 600px;}
-.single .flyer {overflow: hidden; min-height: 600px;}
+.single .flyer {overflow: hidden; min-height: 250px;}
 .single .bg-flyer {position: absolute; z-index: 0;}
 .single header h1, .single header h3 {position: relative; z-index: 2; color: #fff; text-shadow: 2px 2px #000;}
 .single header h3 {margin-top: 0;}
@@ -161,7 +168,6 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 }
 	
 /* 1024px */
-
 @media all and (max-width: 1024px) {
 	
 }
@@ -172,18 +178,21 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px)  {
 	.container {padding: 0 5px 0 5px;}
 	.front-content {padding: 0 10px 0 10px;}
+	#sidebar h3 {font-size: 16px;}
 }
 /* iPad in portrait */
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
-	
+	#sidebar {font-size: 10px;}
+	#sidebar h3 {font-size: 13px; letter-spacing: -1px;}
 }
 
 /* iPhone */
 @media only screen and (min-width:320px) and (max-width:767px) {
 	.container {padding: 0;}
+	.xs-hide {display: none;}
 	.signup {padding: 50px 10px 40px 10px;}
 	.front-content {padding: 0 10px 0 10px;}
 	.filtering button {padding: 6px 8px 6px 8px; font-size: 12px;}
