--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background: url('img/backgroundimage.jpg') #000 center top no-repeat; font-family: Helvetica, Arial, sans-serif; margin-top: 31px;}
+body {background: url('img/backgroundimage.jpg') #000 center top no-repeat; font-family: Helvetica, Arial, sans-serif;}
 ul {padding: 0;}
 li {list-style: none;}
 h1 {}
@@ -23,9 +23,11 @@ button:focus {outline:0px; -webkit-appearance:none;}
 /* .navbar-default .navbar-brand {position: absolute; color: white; padding: 2px 2px 2px 300px;} not needed anymore */
 .navbar-header img.logo {width: 220px;}
 .navbar-default .nav li a {color: white; padding: 10px 15px 13px 15px;}
+.navbar-nav {margin-top: 45px;}
 .navbar-collapse.collapsing .nav{margin-top: -15px;}
 .logoText {color: white;}
-.navbar-left {padding-top: 10px;}
+.navbar-left {padding-top: 10px; float: left;}
+.navbar-right {float: left;}
 .not-found {padding-top: 20px;}
 
 .navbar-collapse.in, .navbar-collapse.collapsing {position: absolute; background: black; top: 100%; width: 150px; padding-bottom: 10px;}
@@ -41,7 +43,7 @@ button:focus {outline:0px; -webkit-appearance:none;}
 @-moz-document url-prefix() {.navbar-collapse.in, .navbar-collapse.collapsing {margin-top: -2px;}}
 
 .navbar-right {padding-top: 35px;}
-.spacer {height: 50px;}
+.spacer {height: 117px;}
 
 /* removes placeholder text in input field on focus */
 input:focus::-webkit-input-placeholder { color:transparent; }
@@ -107,6 +109,10 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 #article-sidebar {padding: 0 10px 0 20px;}
 .article-sidebar h3 {margin-bottom: 10px;}
 .article-sidebar li {margin-bottom: 7px; line-height: 1.3em;}
+
+/* Newsletter */
+.newsthumb {padding: 0 20px 20px 20px;}
+.newsletter .sharing {padding: 15px;}
 
 /* END CSS BY DAVE */
 
@@ -174,7 +180,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 	
 /* 1024px */
 @media all and (max-width: 1024px) {
-	
+	.nabar-nav {margin-top: auto;}
 }
 
 /* iPad, portrait or landscape */
@@ -235,48 +241,16 @@ and (orientation : portrait) {
 /* collapse the Bootstrap navbar at a custom width */
 /* see http://stackoverflow.com/questions/22329606/bootstrap-navbar-collapse-media-query-on-custom-width */
 @media (max-width: 1150px) {
-	.nav-share-buttons{
-		display:none;
-	}
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left, .navbar-right {
-        float: none !important;
-    }
-   .logo {
-    	padding-top: 10px;
-    }
-    .logoText {
-    	padding-bottom: 1px;
-    }
-    .navbar-toggle {
-        display: block;
-        margin-right: 0;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar .navbar-nav {
-        float: none;
- 		margin-top: 7.5px; 
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-        display:block !important;
-    }
+	.nav-share-buttons{display:none;}
+    .navbar-header {float: none;}
+	.logo {padding-top: 10px;}
+    .logoText {padding-bottom: 1px;}
+    .navbar-toggle {display: block; margin-right: 0;}
+    .navbar-collapse {border-top: 1px solid transparent; box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);}
+    .navbar-fixed-top {top: 0; border-width: 0 0 1px;}
+    .navbar-collapse.collapse {display: none;}
+    .navbar .navbar-nav {float: none; margin-top: 7.5px;}
+    .navbar-nav>li {float: none;}
+    .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
+    .collapse.in{display:block;}
 }
