--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-body {background: url('img/backgroundimage.jpg') #000 center top no-repeat; font-family: Helvetica, Arial, sans-serif;}
+@font-face { /* Tryna and Futida by Rory Harnden - http://rrry.me */
+    font-family: 'tryna';
+    src: url('font/trynano.5-webfont.eot');
+    src: url('font/trynano.5-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/trynano.5-webfont.woff2') format('woff2'),
+         url('font/trynano.5-webfont.woff') format('woff'),
+         url('font/trynano.5-webfont.ttf') format('truetype'),
+         url('font/trynano.5-webfont.svg#tryna_no._5regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+@font-face {
+    font-family: 'futida';
+    src: url('font/futida-webfont.eot');
+    src: url('font/futida-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/futida-webfont.woff2') format('woff2'),
+         url('font/futida-webfont.woff') format('woff'),
+         url('font/futida-webfont.ttf') format('truetype'),
+         url('font/futida-webfont.svg#futioaregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {background: url('img/backgroundimage.jpg') #000 center top no-repeat; font-family: Helvetica, Arial, sans-serif; font-family: 'Roboto', Arial, sans-serif; font-weight: 200;}
 body {
 background:
 -webkit-linear-gradient(45deg, hsla(340, 95%, 42%, 1) 0%, hsla(340, 95%, 42%, 0) 70%),
@@ -11,10 +35,10 @@ linear-gradient(135deg, hsla(233, 100%, 42%, 1) 10%, hsla(233, 100%, 42%, 0) 80%
 linear-gradient(225deg, hsla(336, 95%, 48%, 1) 10%, hsla(336, 95%, 48%, 0) 80%),
 linear-gradient(315deg, hsla(106, 94%, 48%, 1) 100%, hsla(106, 94%, 48%, 0) 70%);
 }
+b, strong {letter-spacing: 0.08em;}
 ul {padding: 0;}
 li {list-style: none;}
-h1 {}
-h2, h3, h4, h5, h6, .btn {}
+h1, h2, h3, h4, h5, h6 {font-family: 'futida', Arial, sans-serif;}
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, 
 .col-xs-12 {padding: 0;}
 a:link {text-decoration: none;}
@@ -41,8 +65,11 @@ button:focus {outline:0px; -webkit-appearance:none;}
 .navbar-left {padding-top: 10px; float: left;}
 .navbar-right {float: left;}
 .not-found {padding-top: 20px;}
-.social-button-text {font-size: 8px; color: white;}
 
+.nav-share-buttons a {font-size: 13px; color: white; float: left; clear: both; padding-bottom: 5px; width: 100%px}
+.nav-share-buttons a:hover {text-decoration: underline;}
+.nav-share-buttons i {font-size: 24px; margin-top: 3px; line-height: 15px; width: 20px; float: left;}
+.nav-share-buttons div {float: right; padding-left: 5px;}
 
 .navbar-collapse.in, .navbar-collapse.collapsing {position: absolute; background: black; top: 100%; width: 150px; padding-bottom: 10px;}
 .navbar-toggle {border: none; margin: 10px 0 50px 0;}
@@ -143,7 +170,7 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .single #main-sidebars {padding-left: 10px;}
 	
 /* Events */
-.day-date a, .meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000;}
+.day-date a, .meta a {padding: 2px 4px 2px 4px; margin: 0 4px 4px 0; float: left; color: #000; font-weight: 500;}
 .meta .venue a {background: #2a25ed; color: #ddd;}
 .meta .neighborhood a {background: #db009d;}
 .meta .genre a {background: #8b00f8;}
@@ -153,7 +180,8 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .day-date a {background: #ff2527; margin-bottom: 12px;}
 
 /* Listings Pages */
-.signup, .page-header h1, h1.page-title, h1.entry-title, h4.entry-author {color: #fff; text-shadow: 1px 1px 3px rgba(0,0,0,0.6);}
+.signup, .page-header h1, h1.page-title, h1.entry-title, h4.entry-author, h3.entry-address {color: #fff; text-shadow: 1px 1px 3px rgba(0,0,0,0.6);}
+h4.entry-author, h3.entry-address {margin-top: 0;}
 .listing .front-content, .listing .col-xs-10 {padding: 0;}
 .listing article {color: #fff;}
 .listing .main {padding-left: 8px;}
@@ -174,10 +202,10 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .single header h1, .single header h3 {position: relative; z-index: 2; color: #fff; text-shadow: 2px 2px #000;}
 .single header h3 {margin-top: 0;}
 .single header h4 {color: #fff; text-shadow: 2px 2px #000;}
-.single .entry-summary {padding: 15px; color: #fff;}
+.single .entry-summary {padding: 25px; color: #fff; max-width: 750px;}
 .single .front-content {padding: 0;}
 .category-name {float: left;}
-.category-term {float: left; margin: 8px;}
+.category-term {float: left; margin: 8px; font-weight: 500;}
 
 /* this media query is by Dave- centers the nav when not in hamburger mode */
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
