--- a/style.css
+++ b/style.css
@@ -247,14 +247,18 @@ and (max-device-width : 1024px)  {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
-	.navbar-header img.logo {width: 160px;}
-	h4.logotext {font-size: 13px;}
 	ul.nav {margin-top: 63px;}
 	.navbar-default .nav li a {padding: 0 8px 0 8px;}
 	.nav-share-buttons {display: none;}
 	#all-events {margin-top: 10px;}
 	#sidebar {font-size: 10px;}
 	#sidebar h3 {font-size: 13px; letter-spacing: -1px;}
+	.spacer {height: 0;}
+	.navbar {height: 63px;}
+	.navbar-header img.logo {width: 100px; padding-top: 5px;}
+	.logotext {display: none;}
+	.nav-share-buttons {display:none;}
+	.navbar-nav {margin-top:10px;}
 }
 
 /* iPhone */
@@ -265,12 +269,12 @@ and (orientation : portrait) {
 	.navbar {height: 63px;}
 	.navbar-left {padding-top: 5px;}
 	.navbar-header img.logo {width: 100px;}
-/*	h4.logotext {font-size: 15px; margin-top: 5px;}  the logo text isn't displayed on mobile */
 	.logotext {display: none;}
 	.navbar-toggle {padding-top: 0;}
 	.signup {padding: 50px 10px 40px 10px;}
 	.front-content {padding: 0 10px 0 10px;}
 	.filtering button {padding: 6px 8px 6px 8px; font-size: 12px;}
+	.front-content .thumb {height: 320px;}
 }
 
 /* iPhone 5/5S */
